syntax = "proto3";

package de.unistuttgart.isw.sfsc.framework.messagingpatterns.ackreqrep;
import "framework/types/types.proto";
option java_multiple_files = true;

message RequestOrAcknowledge {
  oneof request_or_acknowledge {
    Request request = 1;
    Acknowledge acknowledge = 2;
  }

  message Request {
    de.unistuttgart.isw.sfsc.framework.types.Topic reply_topic = 1;
    int32 expected_reply_id = 2;
    bytes request_payload = 3;
  }

  message Acknowledge {
    int32 acknowledge_id = 1;
  }
}

message Reply {
  de.unistuttgart.isw.sfsc.framework.types.Topic acknowledge_topic = 1;
  int32 expected_acknowledge_id = 2;
  int32 reply_id = 3;
  bytes reply_payload = 4;
}







